fix overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 html{
-  overflow: hidden;
+  overflow: scroll;
 }
 .App {
   text-align: center;
